<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#57A2E4"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="298dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:background="@color/purple_500"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="85dp"
        android:layout_height="30dp"
        android:layout_marginTop="56dp"
        android:background="@color/purple_500"
        android:gravity="center"
        android:text="@string/txt_number1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="85dp"
        android:layout_height="30dp"
        android:layout_marginTop="56dp"
        android:background="@color/purple_500"
        android:gravity="center"
        android:text="@string/txt_number2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="85dp"
        android:layout_height="30dp"
        android:layout_marginTop="56dp"
        android:background="@color/purple_500"
        android:gravity="center"
        android:text="@string/txt_result"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:onClick="sendAdd"
        android:text="@string/btn_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResult"
        app:layout_constraintVertical_bias="0.199" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:onClick="sendMin"
        android:text="@string/btn_minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPlus"
        app:layout_constraintTop_toBottomOf="@+id/txtResult"
        app:layout_constraintVertical_bias="0.199" />

    <Button
        android:id="@+id/btnMult"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:onClick="sendMult"
        android:text="@string/btn_multi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMinus"
        app:layout_constraintTop_toBottomOf="@+id/txtResult"
        app:layout_constraintVertical_bias="0.199" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="36dp"
        android:onClick="sendDiv"
        android:text="@string/btn_divide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toEndOf="@+id/btnMult"
        app:layout_constraintTop_toBottomOf="@+id/txtResult"
        app:layout_constraintVertical_bias="0.199" />

    <EditText
        android:id="@+id/txtNum1"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="number"
        android:onClick="sendDiv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txtNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/txtNum1" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="211dp"
        android:layout_height="38dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/txtNum2" />

</androidx.constraintlayout.widget.ConstraintLayout>